infinite scroll loading

--- a/src/app/(pages)/queries/style.css
+++ b/src/app/(pages)/queries/style.css
@@ -7,3 +7,10 @@
 .pinned {
     background-color: brown;
 }
+
+button {
+    background-color: gray;
+    display: block;
+    border: 1px solid black;
+    margin: 6px
+}
